# NeuroTrialNER

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  temp_testing.ipynb
core/: Evaluation-Script-Tests.ipynb  bert_helper.py  drugs_condition_dictionary_finder.py  models.py  performance_evaluation.py
data/: BigBio_DS_Prep.ipynb  CT Corpus Stats.ipynb  Generate_Corpus_Stats.ipynb  Rebuttal_ACL_Additional_Data.ipynb  Rebuttal_ACL_Additional_Data_Sampling.ipynb  annotation_agreement_evaluation.py  convert_to_bio_and_generate_dataset_split.py  create_minority_class_samples.py  from_prodigy_data_converter.py  generate_corpus_statistics.py  to_prodigy_data_converter.py
data/data_aact_sample/: aact_neuro_random_sample_202307181034_annotated.csv  aact_neuro_samples_20240422_non_drug_biological_dietary.csv  aact_neuro_samples_20240422_non_drug_biological_dietary_150.csv  aact_neuro_samples_20240422_non_drug_biological_dietary_annotated.csv  aact_neuro_samples_20240513_interventional_with_type_stratified.csv  (+3 more)
models/: 1-CT Models_NER_Aggregation_Rebuttal_2024.ipynb  2-CT Models_Evaluation_ARR_Rebuttal_2024-New-CI.ipynb  2-CT Models_Evaluation_ARR_Rebuttal_2024.ipynb  3-CT Impact_of_Train_Data_Size.ipynb  CT Impact of Train Data Size.ipynb  CT Models Evaluation-UpSet_Plot.ipynb  CT Models Evaluation.ipynb  CT Models Evaluation_ARR_Rebuttal_2024.ipynb  Demo_Running_BERT-base.ipynb  Error_Analysis_PowerBI.pbix  GPT_prompts_comparison_PowerBI.pbix  evaluate.py  run_annotation_models.py  run_experiment_on_server.sh  train_script.py
models/bert/: train_script.py  (+2 more)
(+179 files in other folders)
